--- a/index.html
+++ b/index.html
@@ -1,120 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+  
   <title>Frontend Mentor | Recipe page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-  <!-- Custom Stylesheet -->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="fonts.css">
 </head>
-
 <body>
-  <div class="recipe__container">
-    <img src="./assets/images/image-omelette.jpeg" alt="Image of an omelette" class="recipe__img">
-    <main class="recipe__body">
-      <header>
-        <h1 class="recipe__title">Simple Omelette Recipe</h1>
-        <p class="recipe__intro">An easy and quick dish, perfect for any meal. This classic omelette combines beaten
-          eggs cooked
-          to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-      </header>
 
-      <section class="recipe__prep-time">
-        <h3 class="recipe__prep__title">Preparation time</h3>
-        <ul class="recipe__list">
-          <li class="recipe__list__item"><strong>Total:</strong> Approximately 10 minutes</li>
-          <li class="recipe__list__item"><strong>Preparation:</strong> 5 minutes</li>
-          <li class="recipe__list__item"><strong>Cooking:</strong> 5 minutes</li>
-        </ul>
-      </section>
+  Simple Omelette Recipe
 
-      <section class="recipe__ingredients recipe__section">
-        <h2 class="recipe__section__title">Ingredients</h2>
-        <ul class="recipe__list">
-          <li class="recipe__list__item">2-3 large eggs</li>
-          <li class="recipe__list__item">Salt, to taste</li>
-          <li class="recipe__list__item">Pepper, to taste</li>
-          <li class="recipe__list__item">1 tablespoon of butter or oil</li>
-          <li class="recipe__list__item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-        </ul>
-      </section>
-      <hr>
-      <section class="recipe__instructions recipe__section">
-        <h2 class="recipe__section__title">Instructions</h2>
-        <ol class="recipe__list">
-          <li class="recipe__list__item"><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt
-            and pepper until
-            they are well mixed.
-            You can add a tablespoon of water or milk for a fluffier texture.</li>
-          <li class="recipe__list__item"><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat
-            and add butter or
-            oil.</li>
-          <li class="recipe__list__item"><strong>Cook the omelette:</strong> Once the butter is melted and bubbling,
-            pour in the eggs.
-            Tilt the pan to ensure
-            the eggs evenly coat the surface.</li>
-          <li class="recipe__list__item"><strong>Add fillings (optional):</strong> When the eggs begin to set at the
-            edges but are still
-            slightly runny in the
-            middle, sprinkle your chosen fillings over one half of the omelette.</li>
-          <li class="recipe__list__item"><strong>Fold and serve:</strong> As the omelette continues to cook, carefully
-            lift one edge and
-            fold it over the
-            fillings. Let it cook for another minute, then slide it onto a plate.</li>
-          <li class="recipe__list__item"><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
-          </li>
-        </ol>
-      </section>
-      <hr>
-      <section class="recipe__nutrition recipe__section">
-        <h2 class="recipe__section__title">Nutrition</h2>
-        <p class="recipe__nutrition__info">The table below shows nutritional values per serving without the additional
-          fillings.</p>
-        <table class="nutrition__table">
-          <tbody>
-            <tr>
-              <td class="table__label">Calories</td>
-              <td class="table__value">277kcal</td>
-            </tr>
-            <tr>
-              <td class="table__label">Carbs</td>
-              <td class="table__value">0g</td>
-            </tr>
-            <tr>
-              <td class="table__label">Protein</td>
-              <td class="table__value">20g</td>
-            </tr>
-            <tr>
-              <td class="table__label">Fat</td>
-              <td class="table__value">22g</td>
-            </tr>
-          </tbody>
-        </table>
-      </section>
-    </main>
+  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+
+  Preparation time
+
+  Total: Approximately 10 minutes
+  Preparation: 5 minutes
+  Cooking: 5 minutes
+
+  Ingredients
+
+  2-3 large eggs
+  Salt, to taste
+  Pepper, to taste
+  1 tablespoon of butter or oil
+  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+
+  Instructions
+
+  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+  You can add a tablespoon of water or milk for a fluffier texture.
+
+  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+
+  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+  the eggs evenly coat the surface.
+
+  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+  middle, sprinkle your chosen fillings over one half of the omelette.
+
+  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+  fillings. Let it cook for another minute, then slide it onto a plate.
+
+  Enjoy: Serve hot, with additional salt and pepper if needed.
+
+  Nutrition
+
+  The table below shows nutritional values per serving without the additional fillings.
+
+  Calories
+  277kcal
+
+  Carbs
+  0g
+
+  Protein
+  20g
+
+  Fat
+  22g
+  
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
   </div>
-  <footer class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://www.frontendmentor.io/profile/kwaeterinckx">Kévin Waeterinckx</a>.</p>
-  </footer>
 </body>
-
 </html>
