--- a/index.html
+++ b/index.html
@@ -2,134 +2,127 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- displays site properly based on user's device -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
-	<link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
-	<title>Frontend Mentor | Recipe page</title>
+  <title>Frontend Mentor | Recipe page</title>
 
-	<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-	<style>
-		.attribution {
-			font-size: 11px;
-			text-align: center;
-			line-height: 7.625rem;
-		}
+  <!-- Custom stylesheets -->
+  <link rel="stylesheet" href="./styles/font-faces.css">
+  <link rel="stylesheet" href="./styles/custom-properties.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/media-queries.css">
 
-		.attribution a {
-			color: hsl(228, 45%, 44%);
-		}
-	</style>
-	<!-- Custom stylesheets -->
-	<link rel="stylesheet" href="fonts.css">
-	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<main>
-		<img class="recipe__img" src="./assets/images/image-omelette.jpeg" alt="Image of an omelette">
-		<header>
-			<h1 class="recipe__title">Simple Omelette Recipe</h1>
-			<p class="recipe__intro">
-				An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to
-				perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-		</header>
 
-		<section class="recipe__prep-time">
-			<h2 class="recipe__prep-time__title">Preparation time</h2>
-			<ul class="recipe__list">
-				<li class="recipe__list__item recipe__list__item--prep-time">
-					<span>Total:</span> Approximately 10 minutes
-				</li>
-				<li class="recipe__list__item recipe__list__item--prep-time">
-					<span>Preparation:</span> 5 minutes
-				</li>
-				<li class="recipe__list__item recipe__list__item--prep-time">
-					<span>Cooking:</span> 5 minutes
-				</li>
-			</ul>
-		</section>
+  <main>
+    <!-- Image -->
+    <img class="header__img" src="./assets/images/image-omelette.jpeg" alt="Image of an omelette">
 
-		<section class="recipe__ingredients">
-			<h2 class="section__title">Ingredients</h2>
-			<ul class="recipe__list">
-				<li class="recipe__list__item">2-3 large eggs</li>
-				<li class="recipe__list__item">Salt, to taste</li>
-				<li class="recipe__list__item">Pepper, to taste</li>
-				<li class="recipe__list__item">1 tablespoon of butter or oil</li>
-				<li class="recipe__list__item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-			</ul>
-		</section>
+    <!-- Header -->
+    <header class="recipe__section recipe__section--header">
+      <h1 class="header__title">Simple Omelette Recipe</h1>
+    </header>
 
-		<section class="recipe__instructions">
-			<h2 class="section__title">Instructions</h2>
-			<ol class="recipe__list">
-				<li class="recipe__list__item">
-					<span>Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and pepper until they are
-					well
-					mixed. You can add a tablespoon of water or milk for a fluffier texture.
-				</li>
-				<li class="recipe__list__item">
-					<span>Heat the pan:</span> Place a non-stick frying pan over medium heat and add butter or oil.
-				</li>
-				<li class="recipe__list__item">
-					<span>Cook the omelette:</span> Once the butter is melted and bubbling, pour in the eggs. Tilt the
-					pan
-					to
-					ensure the eggs evenly coat the surface.
-				</li>
-				<li class="recipe__list__item">
-					<span>Add fillings (optional):</span> When the eggs begin to set at the edges but are still slightly
-					runny
-					in the middle, sprinkle your chosen fillings over one half of the omelette.
-				</li>
-				<li class="recipe__list__item">
-					<span>Fold and serve:</span> As the omelette continues to cook, carefully lift one edge and fold it
-					over
-					the
-					fillings. Let it cook for another minute, then slide it onto a plate.
-				</li>
-				<li class="recipe__list__item">
-					<span>Enjoy:</span> Serve hot, with additional salt and pepper if needed.
-				</li>
-			</ol>
-		</section>
+    <!-- Introduction -->
+    <section class="recipe__section recipe__section--intro">
+      <p class="header__intro">An easy and quick dish, perfect for any meal. This classic omelette combines beaten
+        eggs
+        cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </section>
 
-		<section class="recipe__nutrition">
-			<h2 class="section__title">Nutrition</h2>
-			<p class="recipe__nutrition__info">
-				The table below shows nutritional values per serving without the additional
-				fillings.</p>
-			<table class="recipe__nutrition__table">
-				<caption>Nutrition table</caption>
-				<tbody>
-					<tr>
-						<td class="table__label">Calories</td>
-						<td class="table__value">277kcal</td>
-					</tr>
-					<tr>
-						<td class="table__label">Carbs</td>
-						<td class="table__value">0g</td>
-					</tr>
-					<tr>
-						<td class="table__label">Protein</td>
-						<td class="table__value">20g</td>
-					</tr>
-					<tr>
-						<td class="table__label">Fat</td>
-						<td class="table__value">22g</td>
-					</tr>
-				</tbody>
-			</table>
-		</section>
-	</main>
+    <!-- Preparation time -->
+    <section class="recipe__section recipe__section--prep-time">
+      <h2 class="section__title section__title--prep-time">Preparation time</h2>
+      <ul class="ulist__list">
+        <li class="ulist__item ulist__item--prep-time"><span>Total:</span> Approximately 10 minutes</li>
+        <li class="ulist__item ulist__item--prep-time"><span>Preparation:</span> 5 minutes</< /li>
+        <li class="ulist__item ulist__item--prep-time"><span>Cooking:</span> 5 minutes</< /li>
+      </ul>
+    </section>
 
-	<footer class="attribution">
-		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-		Coded by <a href="#">Your Name Here</a>.
-	</footer>
+    <!-- Ingredients -->
+    <section class="recipe__section recipe__section--ingredients">
+      <h2 class="section__title section__title--ingredients">Ingredients</h2>
+      <ul class="ulist__list">
+        <li class="ulist__item ulist__item--ingredients">2-3 large eggs</li>
+        <li class="ulist__item ulist__item--ingredients">Salt, to taste</li>
+        <li class="ulist__item ulist__item--ingredients">Pepper, to taste</li>
+        <li class="ulist__item ulist__item--ingredients">1 tablespoon of butter or oil</li>
+        <li class="ulist__item ulist__item--ingredients">Optional fillings: cheese, diced vegetables, cooked meats,
+          herbs</li>
+      </ul>
+    </section>
+
+    <hr class="hr">
+
+    <!-- Instructions -->
+    <section class="recipe__section recipe__section--instructions">
+      <h2 class="section__title section__title--instructions">Instructions</h2>
+      <ol class="olist__list">
+        <li class="olist__item ulist__item--instructions"><span>Beat the eggs:</span> In a bowl, beat the eggs with a
+          pinch of salt
+          and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
+        <li class="olist__item ulist__item--instructions"><span>Heat the pan:</span> Place a non-stick frying pan over
+          medium heat
+          and add butter or oil.</li>
+        <li class="olist__item ulist__item--instructions"><span>Cook the omelette:</span> Once the butter is melted and
+          bubbling,
+          pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
+        <li class="olist__item ulist__item--instructions"><span>Add fillings (optional):</span> When the eggs begin to
+          set at the
+          edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the
+          omelette.
+        </li>
+        <li class="olist__item ulist__item--instructions"><span>Fold and serve:</span> As the omelette continues to
+          cook, carefully
+          lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
+        </li>
+        <li class="olist__item ulist__item--instructions"><span>Enjoy:</span> Serve hot, with additional salt and pepper
+          if needed.
+        </li>
+      </ol>
+    </section>
+
+    <hr class="hr">
+
+    <!-- Nutrition -->
+    <section class="recipe__section recipe__section--nutrition">
+      <h2 class="section__title section__title--nutrition">Nutrition</h2>
+      <p class="section__p section__p--nutrition">The table below shows nutritional values per serving without the
+        additional fillings.</p>
+      <table class="table table--nutrition">
+        <tbody>
+          <tr class="table__row table__row--nutrition">
+            <td class="table__div table__div--label">Calories</td>
+            <td class="table__div table__div--value">277kcal</td>
+          </tr>
+          <tr class="table__row table__row--nutrition">
+            <td class="table__div table__div--label">Carbs</td>
+            <td class="table__div table__div--value">0g</td>
+          </tr>
+          <tr class="table__row table__row--nutrition">
+            <td class="table__div table__div--label">Protein</td>
+            <td class="table__div table__div--value">20g</td>
+          </tr>
+          <tr class="table__row table__row--nutrition">
+            <td class="table__div table__div--label">Fat</td>
+            <td class="table__div table__div--value">22g</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/kwaeterinckx">Kévin Waeterinckx</a>.
+  </footer>
 </body>
 
 </html>
